# toolbox

./: .gitignore  .gitmodules  readme.md
android/hello-jni_ndkbuild/: build.gradle  local.properties  readme.md
android/hello-jni_ndkbuild/app/: build.gradle
android/hello-jni_ndkbuild/gradle/wrapper/: gradle-wrapper.properties
annotation/: alchemy.py  csv_to_voc_xml.py
c_examples/: tool.c
caffe_protobuf/: caffemodel_to_prototxt.py  load_and_modify_prototxt.py
cmake_examples/: readme.md
cmake_examples/caffe_cpp_play/: CMakeLists.txt  Makefile  compile.sh
cmake_examples/caffe_cpp_play2/: CMakeLists.txt
cmake_examples/caffe_cpp_play2/src/: #blob_demo.cpp#  blob_demo.cpp
cmake_examples/caffe_cpp_play_better/: CMakeLists.txt  compile.sh  get_im_lst.py  readme.md  run.sh  test.prototxt  test_im.lst
cmake_examples/caffe_cpp_play_better/cmake/Modules/: FindCaffe.cmake
cmake_examples/caffe_cpp_play_better/src/: a.out  blob_demo.cpp  gen_txt.py  im_cls.cpp  infer.c  net_demo.cpp  read_line_test.c  read_line_test.cpp  str_append.c  test.txt
cmake_examples/dlib_play/: CMakeLists.txt  compile.bat  compile.sh  readme.md
cmake_examples/dlib_play/src/: face_detection_ex.cpp
cmake_examples/gflags_play/: CMakeLists.txt  readme.md
cmake_examples/glog_play/: CMakeLists.txt  compile.sh  readme.md
cmake_examples/glog_play/src/: main.cpp
cmake_examples/opencv_play/: CMakeLists.txt  compile.bat  readme.md
cmake_examples/opencv_play/src/: imshow_with_box.cpp  main.cpp
cmake_examples/protobuf_play/: CMakeLists.txt  compile.sh  readme.md
cmake_examples/protobuf_play/src/: main.cpp
cmake_examples/protobuf_play/src/proto/: addressbook.pb.cc  addressbook.pb.h
cmake_examples/pthread_play/: a.out  main.cpp
cmake_examples/vlfeat_play/: CMakeLists.txt  readme.md
cmake_examples/vlfeat_play/src/: main.cpp
cpp_examples/: a.out  ex_virtual_function.cpp
dbinfo/: obj_size_dist.py
tf_examples/: iris_eager.ipynb  iris_eager.py  low_level_intro.py  mnist_dataset.py  mnist_eager.py  readme.md
tf_examples/deprecated_since_not_universal/: mnist_eager.ipynb
tf_examples/logs/: events.out.tfevents.1531926513.1080  events.out.tfevents.1531926912.1080  events.out.tfevents.1531927169.1080  events.out.tfevents.1531927229.1080  events.out.tfevents.1531927238.1080  events.out.tfevents.1531927265.1080  events.out.tfevents.1531927294.1080  events.out.tfevents.1531927389.1080  events.out.tfevents.1531927418.1080
